--- a/checkout.html
+++ b/checkout.html
@@ -83,8 +83,7 @@
         </div>
       </div>
     </div>
-
-    <script src="data/cart.js"></script>
-    <script src="scripts/checkout.js"></script>
+    
+    <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
